// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`estimate drift — totals per fixture > galley: total range snapshot 1`] = `
{
  "confirmedBandPct": 10,
  "displayedBandPct": 13,
  "high": 9156,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 7034,
}
`;

exports[`estimate drift — totals per fixture > island: total range snapshot 1`] = `
{
  "confirmedBandPct": 8,
  "displayedBandPct": 11,
  "high": 6587,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 5287,
}
`;

exports[`estimate drift — totals per fixture > l-shape: total range snapshot 1`] = `
{
  "confirmedBandPct": 13,
  "displayedBandPct": 15,
  "high": 9545,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 7057,
}
`;

exports[`estimate drift — totals per fixture > peninsula: total range snapshot 1`] = `
{
  "confirmedBandPct": 9,
  "displayedBandPct": 12,
  "high": 9029,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 7163,
}
`;

exports[`estimate drift — totals per fixture > single: total range snapshot 1`] = `
{
  "confirmedBandPct": 10,
  "displayedBandPct": 13,
  "high": 4239,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 3264,
}
`;

exports[`estimate drift — totals per fixture > u-shape: total range snapshot 1`] = `
{
  "confirmedBandPct": 13,
  "displayedBandPct": 15,
  "high": 13956,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 10326,
}
`;
